--- a/client/src/app/collection/components/collection-view/collection-view.component.css
+++ b/client/src/app/collection/components/collection-view/collection-view.component.css
@@ -103,8 +103,7 @@
 
 .horizontal-slide {
   white-space: nowrap;
-  overflow-x: scroll;
-  -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
   width: 540px;
 }
 
@@ -112,6 +111,24 @@
   display: inline-block;
   float: none;
   margin: 3px;
+}
+
+.tags-scrollbar {
+  padding-bottom: 10px;
+  overflow-x: hidden !important;
+}
+
+.tag-list .tags-scrollbar-bar {
+  height: 9px;
+  background-color: rgba(0, 0, 0, .15);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, .5), inset 0 0 2px rgba(0, 0, 0, .2), 0 0 0 1px hsla(0, 0%, 100%, .5);
+  border-radius: 3px;
+}
+
+.tag-list .tags-scrollbar-thumb, .tag-list .tags-scrollbar-thumb:active, .tag-list .tags-scrollbar-thumb:hover {
+  cursor: pointer;
+  background-color: #f8f8f8;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, .2), 0 1px 1px rgba(0, 0, 0, .5);
 }
 
 .tag-list {
@@ -138,6 +155,10 @@
   /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff3232', endColorstr='#875196', GradientType=1);
   /* IE6-9 fallback on horizontal gradient */
+}
+
+.color-table {
+  margin-top: 25px;
 }
 
 .color-table .tooltip-inner {
@@ -260,6 +281,8 @@ div.rtl .arrow-left {
 
 .price-range .noUi-tooltip {
   font-size: 11px;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .noUi-horizontal .noUi-handle {
@@ -294,5 +317,5 @@ div.rtl .arrow-left {
   top: 26px;
   right: 26px;
   font-size: 20px;
-  z-index: 9999;
+  z-index: 1;
 }
