Query text are turned into tags. Added tag remove button

--- a/client/src/app/collection/components/collection-view/collection-view.component.css
+++ b/client/src/app/collection/components/collection-view/collection-view.component.css
@@ -136,6 +136,13 @@
   overflow-x: hidden;
 }
 
+.tag-remove-icon {
+  border-left: 1px solid #b9b9b9;
+  padding-left: 6px;
+  margin-left: 4px;
+  font-size: 14px;
+}
+
 .color {
   width: 24px;
   height: 24px;
